[package]
name = "mozzart-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Core music theory functionality"
license.workspace = true
repository.workspace = true

[dependencies]
paste = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4.0"

[[bench]]
name = "pitch"
harness = false

[[bench]]
name = "interval"
harness = false

[[bench]]
name = "octave"
harness = false

[[bench]]
name = "scale"
harness = false 